--- a/src/renderer/prototypes/MainViewer/MainViewer.module.scss
+++ b/src/renderer/prototypes/MainViewer/MainViewer.module.scss
@@ -44,6 +44,7 @@
 .dummyBoxForStickyHeader {
   height: $time-ruler-height;
   margin-bottom: $track-margin;
+  flex: none;
 }
 
 .axisLabelSection {
